dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/CommerceDiagnosticCustomObject__c.object-meta.xml
<CustomObject>
    <label>Commerce Diagnostic Custom Object</label>
    <nameField>
        <label>CommerceDiagnosticCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commerce Diagnostic Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>