dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/B2B_Edition__c.field-meta.xml
<CustomField>
    <fullName>B2B_Edition__c</fullName>
    <description>Edition is Lightning (LB2B), CCRZ, or there can be future flavours.</description>
    <label>B2B Edition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>