dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/B2B_Version__c.field-meta.xml
<CustomField>
    <fullName>B2B_Version__c</fullName>
    <description>Optional: If managed package, then Major, Minor, Patch revision numbers. If Lightning then optional service version.</description>
    <label>B2B Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>