dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/Browser_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Browser_Device_Type__c</fullName>
    <description>Code for the Browser and Device Type</description>
    <label>Browser Device Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>