dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/Context_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Context_Id_2__c</fullName>
    <label>Context Id 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>