dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/Context_Map__c.field-meta.xml
<CustomField>
    <fullName>Context_Map__c</fullName>
    <label>Context Map</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>