dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/Effective_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Effective_Account_Id__c</fullName>
    <label>Effective Account Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>