dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/Event_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Event_Created_By__c</fullName>
    <label>Event Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>