dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/Event_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Created_Date__c</fullName>
    <label>Event Created Date</label>
    <type>DateTime</type>
</CustomField>