dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/Operation_Status__c.field-meta.xml
<CustomField>
    <fullName>Operation_Status__c</fullName>
    <label>Operation Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>