dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/Operation_Time__c.field-meta.xml
<CustomField>
    <fullName>Operation_Time__c</fullName>
    <label>Operation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>