dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/OS_Version__c.field-meta.xml
<CustomField>
    <fullName>OS_Version__c</fullName>
    <description>Code for operating system and version</description>
    <label>OS Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>