dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/fields/WebStore_Type__c.field-meta.xml
<CustomField>
    <fullName>WebStore_Type__c</fullName>
    <description>Type of WebStore, ie. B2B, B2C, OMS</description>
    <label>WebStore Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>