dependencies/b2b-commerce-on-lightning-quickstart/sfdx/force-app/main/default/objects/CommerceDiagnosticCustomObject__c/listViews/CommerceDiagnosticEventFields.listView-meta.xml
<ListView>
    <fullName>CommerceDiagnosticEventFields</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Context_Id__c</columns>
    <columns>Context_Id_2__c</columns>
    <columns>User__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Operation__c</columns>
    <columns>Operation_Stage__c</columns>
    <columns>Operation_Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Operation_Time__c</columns>
    <columns>Operation_State__c</columns>
    <columns>Context_Map__c</columns>
    <filterScope>Everything</filterScope>
    <label>Commerce Diagnostic Event Fields</label>
</ListView>